--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,9 @@ git2 = "0.15.0"
 url = "2.3.1"
 walkdir = "2.3.2"
 rust-code-analysis = "0.0.24"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+serde_with = { version = "2.0.0"}
 
 [dev-dependencies]
 assert_cmd = "2.0"
