--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,27 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_with = { version = "2.0.0"}
 home = "0.5.4"
+#the dynamic feature is enable to allow for fast compilation
+# your program will be run with bevy as a dynamic library
+# not that this does not work on windows
+# find out more on the rust book
+# https://bevyengine.org/learn/book/getting-started/setup/#enable-fast-compiles-optional
+# instead of setting the dynamic feature, you can also run
+# your program using the `--features bevy/dynamic` flags
+# example: cargo run --features bevy/dynamic
+#
+# don't forget to disable this feature before release
+bevy = { version = "0.9.0", features = ["dynamic"] }
 
 [dev-dependencies]
 assert_cmd = "2.0"
 predicates = "2.1"
+
+# Enable a small amount of optimization in debug mode
+# Debug mode can be very slow
+[profile.dev]
+opt-level = 1
+
+# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
+[profile.dev.package."*"]
+opt-level = 3
