--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ rust-code-analysis = "0.0.24"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_with = { version = "2.0.0"}
+home = "0.5.4"
 
 [dev-dependencies]
 assert_cmd = "2.0"
