--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ home = "0.5.4"
 #
 # don't forget to disable this feature before release
 bevy = { version = "0.9.0", features = ["dynamic"] }
+bevy-inspector-egui = "0.15.0"
 
 [dev-dependencies]
 assert_cmd = "2.0"
