--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,17 +15,15 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_with = { version = "2.0.0"}
 home = "0.5.4"
-#the dynamic feature is enable to allow for fast compilation
-# your program will be run with bevy as a dynamic library
-# not that this does not work on windows
-# find out more on the rust book
-# https://bevyengine.org/learn/book/getting-started/setup/#enable-fast-compiles-optional
-# instead of setting the dynamic feature, you can also run
-# your program using the `--features bevy/dynamic` flags
+
+#for fast compilation of
+# your program consider using the dynamic feature,
+# with `--features bevy/dynamic` flags.
 # example: cargo run --features bevy/dynamic
-#
-# don't forget to disable this feature before release
-bevy = { version = "0.9.0", features = ["dynamic"] }
+# This does not, work on windows.
+# Find out more https://docs.rs/bevy_dylib/latest/bevy_dylib/#the-recommended-way
+# and https://docs.rs/bevy_dylib/latest/bevy_dylib/#the-recommended-way
+bevy = { version = "0.9.0" }
 bevy-inspector-egui = "0.15.0"
 
 [dev-dependencies]
