--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ home = "0.5.4"
 bevy = { version = "0.9.0" }
 bevy-inspector-egui = "0.15.0"
 rand = "0.8.5"
+sha2 = "0.10.6"
+data-encoding = "2.3.3"
 
 [dev-dependencies]
 assert_cmd = "2.0"
