--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ walkdir = "2.3.2"
 rust-code-analysis = "0.0.24"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_yaml = "0.9"
 serde_with = { version = "2.0.0"}
 home = "0.5.4"
 
