--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,14 @@ name = "wake"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "lib"
+path = "src/lib.rs"
+
+[[bin]]
+name = "wake"
+path = "src/main.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
@@ -33,6 +41,7 @@ data-encoding = "2.3.3"
 [dev-dependencies]
 assert_cmd = "2.0"
 predicates = "2.1"
+criterion = "0.4"
 
 # Enable a small amount of optimization in debug mode
 # Debug mode can be very slow
@@ -42,3 +51,7 @@ opt-level = 1
 # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
 [profile.dev.package."*"]
 opt-level = 3
+
+[[bench]]
+name = "benches"
+harness = false
