--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -19,3 +19,6 @@ data-encoding = "2.3.3"
 rayon = "1.6.1"
 axum = "0.6.3"
 tokio = { version = "1.24.2", features = ["full"] }
+log = "0.4.17"
+serde_json = "1.0.91"
+simple_logger = "4.0.0"
