--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -22,3 +22,5 @@ tokio = { version = "1.24.2", features = ["full"] }
 log = "0.4.17"
 serde_json = "1.0.91"
 simple_logger = "4.0.0"
+tar = "0.4.38"
+flate2 = "1.0.25"
