--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -25,4 +25,4 @@ simple_logger = "4.0.0"
 tar = "0.4.38"
 flate2 = "1.0.25"
 lazy_static = "1.4.0"
-axum-debug = "0.3.3"
+tokio-util = { version = "0.7.5", features = ["io"] }
