--- a/wake/Cargo.toml
+++ b/wake/Cargo.toml
@@ -17,7 +17,7 @@ url = "2.3.1"
 walkdir = "2.3.2"
 rust-code-analysis = "0.0.24"
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+serde_json = "1.0.91"
 serde_yaml = "0.9"
 home = "0.5.4"
 
@@ -25,6 +25,9 @@ sha2 = "0.10.6"
 data-encoding = "2.3.3"
 rayon = "1.6.1"
 spinners = "4.1.0"
+reqwest = { version = "0.11.14", features = ["blocking"] }
+lazy_static = "1.4.0"
+tokio = "1.25.0"
 
 [dev-dependencies]
 assert_cmd = "2.0"
