fix binary release

--- a/.github/workflows/publish-binary.yaml
+++ b/.github/workflows/publish-binary.yaml
@@ -48,5 +48,7 @@ jobs:
           # [default value: windows]
           # [possible values: all, unix, windows, none]
           zip: windows
+          # (optional) Target triple, default is host triple.
+          target: ${{ matrix.target }}
           # (required) GitHub token for uploading assets to GitHub Releases.
           token: ${{ secrets.GITHUB_TOKEN }}
