--- a/players/Cargo.toml
+++ b/players/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-core = { path = "../core" }
+core = { package="waking-git-core", path = "../waking-git-core" }
 
 clap = { version = "4.0.23", features = ["derive"] }
 #for fast compilation of
