--- a/wake/Cargo.toml
+++ b/wake/Cargo.toml
@@ -10,7 +10,7 @@ path = "src/main.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-core = { path = "../core" }
+core = { package="waking-git-core", path = "../waking-git-core" }
 clap = { version = "4.0.23", features = ["derive"] }
 git2 = "0.15.0"
 url = "2.3.1"
