--- a/waking-git-core/Cargo.toml
+++ b/waking-git-core/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
-name = "core"
+name = "waking-git-core"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+description = "Library implementing the core functionality of waking-git"
+repository = "https://github.com/elhmn/waking-git"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
